# malpz

./: .gitignore  MANIFEST.in  README.md  pipeline-mirror.yaml  pyproject.toml  setup.py  tox.ini
malpz/: __init__.py
tests/: test_malpz.py
